--- a/app/src/main/res/layout/activity_chat_list_screen.xml
+++ b/app/src/main/res/layout/activity_chat_list_screen.xml
@@ -6,22 +6,49 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/tv_chat_list_header"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar_chat_list"
         android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:text="채팅 목록"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:gravity="center"
+        android:layout_height="?attr/actionBarSize"
         android:background="#FFFFFF"
         android:elevation="4dp"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/logo"
+            android:layout_gravity="start"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="end"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/btn_notification"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/bell"
+                android:layout_marginEnd="16dp"/>
+
+            <ImageView
+                android:id="@+id/btn_menu"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/menu"
+                android:layout_marginEnd="16dp"/>
+        </LinearLayout>
+
+    </androidx.appcompat.widget.Toolbar>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_chat_list_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_chat_list_header"
+        app:layout_constraintTop_toBottomOf="@id/toolbar_chat_list"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:listitem="@layout/item_chat_list_row"/> </androidx.constraintlayout.widget.ConstraintLayout>
+        tools:listitem="@layout/item_chat_list_row"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
