--- a/app/src/main/res/layout/activity_chat_room_screen.xml
+++ b/app/src/main/res/layout/activity_chat_room_screen.xml
@@ -12,6 +12,13 @@
         android:background="#FFFFFF"
         android:elevation="4dp"
         app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/logo"
+            android:layout_gravity="start"/>
+
         <TextView
             android:id="@+id/tv_chat_room_title"
             android:layout_width="wrap_content"
@@ -20,6 +27,28 @@
             android:textSize="18sp"
             android:textStyle="bold"
             android:layout_gravity="center"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="end"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/btn_notification"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/bell"
+                android:layout_marginEnd="16dp"/>
+
+            <ImageView
+                android:id="@+id/btn_menu"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/menu"
+                android:layout_marginEnd="16dp"/>
+        </LinearLayout>
     </androidx.appcompat.widget.Toolbar>
 
     <androidx.recyclerview.widget.RecyclerView
