--- a/app/src/main/res/layout/activity_route_detail_taxi.xml
+++ b/app/src/main/res/layout/activity_route_detail_taxi.xml
@@ -2,36 +2,62 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF">
 
-    <ImageView
-        android:id="@+id/btn_close_detail"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:src="@android:drawable/ic_menu_close_clear_cancel"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        app:tint="#000000"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar_route_detail"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="#FFFFFF"
+        android:elevation="0dp"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/logo"
+            android:layout_gravity="start"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="end"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/btn_notification"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/bell"
+                android:layout_marginEnd="16dp"/>
+
+            <ImageView
+                android:id="@+id/btn_menu"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/menu"
+                android:layout_marginEnd="16dp"/>
+        </LinearLayout>
+    </androidx.appcompat.widget.Toolbar>
 
     <TextView
         android:id="@+id/tv_detail_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="고척스카이돔 ➔ 안양천로 537다길"
+        tools:text="고척스카이돔 ➔ 안양천로 537다길"
         android:background="#FFE4E1"
         android:padding="12dp"
         android:gravity="center"
         android:textStyle="bold"
         android:layout_marginTop="16dp"
         android:layout_marginHorizontal="24dp"
-        app:layout_constraintTop_toBottomOf="@id/btn_close_detail"
+        app:layout_constraintTop_toBottomOf="@id/toolbar_route_detail"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
-
     <LinearLayout
         android:id="@+id/layout_taxi_summary"
         android:layout_width="wrap_content"
@@ -59,7 +85,7 @@
 
         <TextView
             android:id="@+id/tv_detail_time"
-            android:text="9분"
+            tools:text="9분"
             android:textSize="18sp"
             android:textStyle="bold"
             android:textColor="#000000"/>
@@ -79,7 +105,7 @@
         android:id="@+id/tv_detail_distance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="3.1km\n약 6,400원~"
+        tools:text="3.1km\n약 6,400원~"
         android:textSize="16sp"
         android:textColor="#000000"
         android:layout_marginStart="24dp"
