--- a/app/src/main/res/layout/activity_location_share.xml
+++ b/app/src/main/res/layout/activity_location_share.xml
@@ -62,11 +62,11 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
 
-            <androidx.fragment.app.FragmentContainerView
-                android:id="@+id/map_fragment_location"
-                android:name="com.naver.maps.map.MapFragment"
+            <LinearLayout
+                android:id="@+id/map_container_location"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:orientation="vertical" />
 
         </androidx.cardview.widget.CardView>
 
