--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -78,13 +78,15 @@
             app:layout_constraintTop_toTopOf="@+id/img_profile_1"
             app:layout_constraintBottom_toBottomOf="@+id/img_profile_1"/>
 
-        <ImageView
-            android:id="@+id/img_check_1"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+        <CheckBox
+            android:id="@+id/cb_check_1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            app:srcCompat="@drawable/uncheckbox"
-            app:layout_constraintStart_toStartOf="@+id/img_profile_1"
+            android:layout_marginStart="20dp"
+            android:minWidth="0dp"
+            android:minHeight="0dp"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/img_profile_1"/>
 
         <TextView
@@ -95,18 +97,20 @@
             android:textColor="@color/black"
             android:textStyle="bold"
             android:layout_marginStart="12dp"
-            app:layout_constraintStart_toEndOf="@+id/img_check_1"
-            app:layout_constraintTop_toTopOf="@+id/img_check_1"
-            app:layout_constraintBottom_toBottomOf="@+id/img_check_1"/>
+            app:layout_constraintStart_toEndOf="@+id/cb_check_1"
+            app:layout_constraintTop_toTopOf="@+id/cb_check_1"
+            app:layout_constraintBottom_toBottomOf="@+id/cb_check_1"/>
 
-        <ImageView
-            android:id="@+id/img_check_2"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+        <CheckBox
+            android:id="@+id/cb_check_2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            app:srcCompat="@drawable/checkbox1"
-            app:layout_constraintStart_toStartOf="@+id/img_check_1"
-            app:layout_constraintTop_toBottomOf="@+id/img_check_1"/>
+            android:checked="true"
+            android:minWidth="0dp"
+            android:minHeight="0dp"
+            app:layout_constraintStart_toStartOf="@+id/cb_check_1"
+            app:layout_constraintTop_toBottomOf="@+id/cb_check_1"/>
 
         <TextView
             android:id="@+id/tv_noti_3"
@@ -116,9 +120,9 @@
             android:textColor="@color/black"
             android:textStyle="bold"
             android:layout_marginStart="12dp"
-            app:layout_constraintStart_toEndOf="@+id/img_check_2"
-            app:layout_constraintTop_toTopOf="@+id/img_check_2"
-            app:layout_constraintBottom_toBottomOf="@+id/img_check_2"/>
+            app:layout_constraintStart_toEndOf="@+id/cb_check_2"
+            app:layout_constraintTop_toTopOf="@+id/cb_check_2"
+            app:layout_constraintBottom_toBottomOf="@+id/cb_check_2"/>
 
 
         <LinearLayout
@@ -128,7 +132,7 @@
             android:orientation="horizontal"
             android:gravity="center"
             android:layout_marginTop="30dp"
-            app:layout_constraintTop_toBottomOf="@+id/img_check_2">
+            app:layout_constraintTop_toBottomOf="@+id/cb_check_2">
 
             <FrameLayout
                 android:id="@+id/frame_weather"
@@ -210,7 +214,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
-
         </FrameLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
