--- a/app/src/main/res/layout/activity_route_main.xml
+++ b/app/src/main/res/layout/activity_route_main.xml
@@ -190,5 +190,5 @@
         android:layout_height="match_parent"
         android:layout_gravity="end"
         android:background="#FFFFFF"
-        app:headerLayout="@layout/nav_header" />
+        app:headerLayout="@layout/menu_drawer" />
 </androidx.drawerlayout.widget.DrawerLayout>
