--- a/app/src/main/res/layout/activity_chat_room_screen.xml
+++ b/app/src/main/res/layout/activity_chat_room_screen.xml
@@ -74,7 +74,17 @@
             android:orientation="horizontal"
             android:padding="10dp"
             android:background="#FFFFFF"
+            android:gravity="center_vertical"
             app:layout_constraintBottom_toBottomOf="parent">
+
+            <android.widget.ImageButton
+                android:id="@+id/btn_chat_add_friend"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@android:drawable/ic_input_add"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                app:tint="#888888"
+                android:layout_marginEnd="8dp"/>
 
             <EditText
                 android:id="@+id/et_chat_input"
@@ -83,14 +93,15 @@
                 android:layout_weight="1"
                 android:hint="메시지를 입력하세요"
                 android:padding="10dp"
-                android:background="@null"/>
+                android:background="@drawable/bg_input_rounded"/>
 
             <Button
                 android:id="@+id/btn_chat_send"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="전송"
-                android:backgroundTint="#F08080"/>
+                android:backgroundTint="#F08080"
+                android:layout_marginStart="8dp"/>
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
