--- a/app/src/main/res/layout/activity_chat_room_screen.xml
+++ b/app/src/main/res/layout/activity_chat_room_screen.xml
@@ -58,6 +58,21 @@
                     android:layout_marginEnd="16dp"/>
             </LinearLayout>
         </androidx.appcompat.widget.Toolbar>
+        <TextView
+            android:id="@+id/tv_first_greeting"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@@님과의 첫 대화입니다\n반갑게 인사해보세요!!"
+            android:gravity="center"
+            android:padding="16dp"
+            android:background="#F5F5F5"
+            android:textColor="#555555"
+            android:textSize="14sp"
+            android:visibility="gone"
+            app:layout_constraintTop_toBottomOf="@id/toolbar_chat_room"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="16dp"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_chat_room_messages"
