--- a/app/src/main/res/layout/activity_my_page.xml
+++ b/app/src/main/res/layout/activity_my_page.xml
@@ -10,77 +10,85 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#FFFFFF"
+        android:background="@color/white"
         android:padding="24dp">
 
-        <ImageView
-            android:id="@+id/btn_back"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:src="@drawable/vector"
-            android:rotation="180"
+        <include
+            android:id="@+id/toolbar"
+            layout="@layout/view_common_toolbar"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginHorizontal="-24dp"
+            android:layout_marginTop="-24dp"/>
 
-        <TextView
-            android:id="@+id/tv_title"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layout_profile_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="내 정보"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            android:textColor="#000000"
-            android:layout_marginTop="20dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btn_back"/>
-
-        <ImageView
-            android:id="@+id/iv_my_profile"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:src="@mipmap/ic_launcher"
             android:layout_marginTop="40dp"
-            app:layout_constraintTop_toBottomOf="@id/tv_title"
+            app:layout_constraintTop_toBottomOf="@id/toolbar"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <ImageView
+                android:id="@+id/iv_my_profile"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:src="@drawable/profile"
+                android:scaleType="centerCrop"
+                android:background="@drawable/bg_input_rounded"
+                android:clipToOutline="true"/>
+
+            <ImageView
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:src="@android:drawable/ic_menu_camera"
+                app:tint="#555555"
+                android:background="@drawable/bg_input_rounded"
+                android:padding="6dp"
+                app:layout_constraintBottom_toBottomOf="@id/iv_my_profile"
+                app:layout_constraintEnd_toEndOf="@id/iv_my_profile"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
             android:id="@+id/label_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="이름"
-            android:textColor="#888888"
+            android:textColor="@color/gray_text"
             android:layout_marginTop="40dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/iv_my_profile"/>
+            app:layout_constraintTop_toBottomOf="@id/layout_profile_image"/>
 
-        <TextView
-            android:id="@+id/tv_my_name"
+        <EditText
+            android:id="@+id/et_my_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:text="홍길동"
+            android:hint="이름을 입력하세요"
             android:textSize="18sp"
-            android:textColor="#000000"
+            android:textColor="@color/black"
             android:textStyle="bold"
-            android:layout_marginTop="8dp"
+            android:background="@android:color/transparent"
+            android:paddingVertical="8dp"
+            android:layout_marginTop="4dp"
             app:layout_constraintTop_toBottomOf="@id/label_name"/>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="#EEEEEE"
-            android:layout_marginTop="10dp"
-            app:layout_constraintTop_toBottomOf="@id/tv_my_name"/>
+            android:background="@color/brand_main"
+            app:layout_constraintTop_toBottomOf="@id/et_my_name"/>
 
         <TextView
             android:id="@+id/label_email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="이메일 (아이디)"
-            android:textColor="#888888"
+            android:textColor="@color/gray_text"
             android:layout_marginTop="24dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_my_name"/>
+            app:layout_constraintTop_toBottomOf="@id/et_my_name"/>
 
         <TextView
             android:id="@+id/tv_my_email"
@@ -88,26 +96,37 @@
             android:layout_height="wrap_content"
             tools:text="user@example.com"
             android:textSize="18sp"
-            android:textColor="#000000"
-            android:textStyle="bold"
+            android:textColor="#555555"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@id/label_email"/>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="#EEEEEE"
+            android:background="@color/divider"
             android:layout_marginTop="10dp"
             app:layout_constraintTop_toBottomOf="@id/tv_my_email"/>
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_save_profile"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:text="저장하기"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            android:backgroundTint="@color/brand_main"
+            app:cornerRadius="12dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="20dp"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <com.google.android.material.navigation.NavigationView
-        android:id="@+id/navigation_view"
-        android:layout_width="wrap_content"
+    <include
+        layout="@layout/menu_drawer"
+        android:layout_width="300dp"
         android:layout_height="match_parent"
         android:layout_gravity="end"
-        android:background="#FFFFFF"
-        app:headerLayout="@layout/menu_drawer" />
+        android:background="@color/white" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
