--- a/app/src/main/res/layout/item_chat_bubble_me.xml
+++ b/app/src/main/res/layout/item_chat_bubble_me.xml
@@ -5,7 +5,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="8dp">
+    android:paddingHorizontal="8dp"
+    android:paddingVertical="4dp">
+
+    <TextView
+        android:id="@+id/tv_chat_date_header"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="2025-12-03"
+        android:textSize="12sp"
+        android:textColor="#888888"
+        android:background="@drawable/bg_input_rounded"
+        android:paddingHorizontal="12dp"
+        android:paddingVertical="4dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_bubble_me_content"
@@ -16,16 +34,19 @@
         android:textColor="#FFFFFF"
         android:textSize="15sp"
         android:background="@drawable/bg_chat_bubble_me"
+        android:layout_marginTop="4dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_max="260dp"/> <TextView
-    android:id="@+id/tv_bubble_me_time"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    tools:text="오후 2:30"
-    android:textSize="10sp"
-    android:layout_marginEnd="4dp"
-    app:layout_constraintEnd_toStartOf="@id/tv_bubble_me_content"
-    app:layout_constraintBottom_toBottomOf="@id/tv_bubble_me_content"/>
+        app:layout_constraintTop_toBottomOf="@id/tv_chat_date_header"
+        app:layout_constraintWidth_max="260dp"/>
+
+    <TextView
+        android:id="@+id/tv_bubble_me_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="오후 2:30"
+        android:textSize="10sp"
+        android:layout_marginEnd="4dp"
+        app:layout_constraintEnd_toStartOf="@id/tv_bubble_me_content"
+        app:layout_constraintBottom_toBottomOf="@id/tv_bubble_me_content"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
