--- a/app/src/main/res/layout/item_chat_list_row.xml
+++ b/app/src/main/res/layout/item_chat_list_row.xml
@@ -6,39 +6,69 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="16dp"
-    android:background="?attr/selectableItemBackground"> <ImageView
-    android:id="@+id/iv_chat_list_profile"
-    android:layout_width="50dp"
-    android:layout_height="50dp"
-    android:src="@mipmap/ic_launcher"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintBottom_toBottomOf="parent" />
+    android:background="?attr/selectableItemBackground">
+
+    <ImageView
+        android:id="@+id/iv_chat_list_profile"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@drawable/profile"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
     <TextView
         android:id="@+id/tv_chat_list_username"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        tools:text="철수"
+        tools:text="철수, 영희, 맹구"
         android:textStyle="bold"
         android:textSize="16sp"
         android:textColor="#000000"
         android:layout_marginStart="16dp"
+        android:layout_marginEnd="8dp"
+        android:maxLines="1"
+        android:ellipsize="end"
         app:layout_constraintStart_toEndOf="@id/iv_chat_list_profile"
-        app:layout_constraintTop_toTopOf="@id/iv_chat_list_profile" />
+        app:layout_constraintTop_toTopOf="@id/iv_chat_list_profile"
+        app:layout_constraintEnd_toStartOf="@id/tv_chat_list_info"/>
 
     <TextView
         android:id="@+id/tv_chat_list_preview"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        tools:text="너 어디야? 빨리 와"
+        tools:text="대화를 시작해보세요!"
         android:textSize="14sp"
         android:textColor="#808080"
         android:layout_marginTop="4dp"
         android:ellipsize="end"
         android:maxLines="1"
+        android:layout_marginEnd="24dp"
         app:layout_constraintStart_toStartOf="@id/tv_chat_list_username"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_chat_list_username" />
+
+    <TextView
+        android:id="@+id/tv_chat_list_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="9/22 강남역"
+        android:textSize="12sp"
+        android:textColor="#FF8989"
+        android:textStyle="bold"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tv_chat_list_username"
+        app:layout_constraintBottom_toBottomOf="@id/tv_chat_list_username"/>
+
+    <View
+        android:id="@+id/view_unread_dot"
+        android:layout_width="8dp"
+        android:layout_height="8dp"
+        android:background="@drawable/bg_button_red"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_chat_list_info"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
